--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "untitled",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev:start": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.18.1",
