--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "untitled",
   "version": "1.0.0",
   "scripts": {
-    "dev:start": "nodemon app.js"
+    "dev:start": "nodemon app.js",
+    "test": "jest tests/*.test.js",
+    "coverage": "npm run pretest && jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "dependencies": {
     "express": "^4.18.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "coveralls": "^3.1.1"
   }
 }
